--- a/Ruleta/style.css
+++ b/Ruleta/style.css
@@ -151,6 +151,7 @@ body {
 #wheelCanvas {
   width: 100%;
   height: 100%;
+  cursor: pointer;
   filter: drop-shadow(0 18px 28px rgba(11, 19, 43, 0.2));
   border-radius: 50%;
 }
@@ -308,7 +309,7 @@ body {
 }
 
 .option-toggle input:checked + .slider::after {
-  transform: translateX(53px);
+  transform: translateX(26px);
 }
 
 .label-text {
